# OpenACM

./: .gitignore  .npmignore  AGENTS_SUPERPOWERS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP_INTEGRATION.md  SECURITY.md  SKILLS_TOOLS_GUIDE.md  TROUBLESHOOTING.md  acm.bat  acm.sh  archivo_prueba_acm.txt  docker-compose.yml  install.ps1  install.sh  organize.py  package.json  pyproject.toml  run.bat  run.sh  setup.bat  setup.ps1  setup.sh  test_imports.py  update.bat  update.ps1  update.sh
.opencode/: SKILL.md
Descargas/: ootx_openacm.txt
assets/: IconEdit.psd
backend/: package.json
backend/src/: index.ts
config/: .env.example  default.yaml
docker/: docker-compose.yml
docs/: 01-introduction.md  02-getting-started.md  03-architecture.md  04-core-concepts.md  05-tools-reference.md  06-skills-system.md  07-agents.md  08-channels.md  09-llm-providers.md  10-api-reference.md  11-configuration.md  12-security.md  13-mcp.md  14-memory-rag.md  15-activity-routines.md  16-dashboard.md  17-extending.md  18-roadmap.md  19-cron-scheduler.md  20-token-optimization.md  21-cli-providers.md  22-swarms.md  23-code-resurrection.md  23-plugins.md  25-third-party-integrations.md  26-dev-mode-plugin-plan.md  27-cli-setup.md  README.md  SECURITY.md  SKILLS_TOOLS_GUIDE.md  TROUBLESHOOTING.md
frontend/: next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: error.tsx  (+2 more)
scripts/: acm.ps1  acm.sh  build-frontend.bat  run.ps1  run.sh  setup.ps1  setup.sh  update.ps1  update.sh
skills/: README.md  SKILL.md  __init__.py  skill_security_auditor.py  windows_file_manager.md
tests/: conftest.py
(+350 files in other folders)
